<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/merquri_notes_main_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".utils.dialog.GenericDialogFragment">

    <TextView
        android:id="@+id/dialog_title_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:text="@string/dialog_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_subtitle_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:text="@string/dialog_sub_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/three_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_one_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_two_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_negative_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/two_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/black"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:id="@+id/negative_spacer"
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/setup_singpass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setup_cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <View
            android:layout_width="15dp"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setup_singpass_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/black"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>