<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.home.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/merquri_notes_main_background">

        <include
            android:id="@+id/custom_tool_bar"
            layout="@layout/custom_title_bar" />

        <LinearLayout
            android:id="@+id/recent_notes_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_tool_bar">

            <!-- Clock Icon -->
            <ImageView
                android:id="@+id/recent_notes_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="Recent notes"
                android:src="@drawable/clock_icon" />

            <!-- Recently Created Notes Text -->
            <TextView
                android:id="@+id/recent_notes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Recently created notes"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_notes_section">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/work_study_title_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/work_study_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="Recent notes"
                            android:src="@drawable/work_study_home_icon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/work_study_title_container" />

                        <TextView
                            android:id="@+id/work_study_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/work_study_title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@+id/work_study_icon"
                            app:layout_constraintTop_toTopOf="@+id/work_study_title_container" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/work_study_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/work_study_title_container" />

                    <LinearLayout
                        android:id="@+id/life_title_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/life_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="Recent notes"
                            android:src="@drawable/life_home_icon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/work_study_title_container" />

                        <TextView
                            android:id="@+id/life_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/life_title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@+id/work_study_icon"
                            app:layout_constraintTop_toTopOf="@+id/work_study_title_container" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/life_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/work_study_title_container" />

                    <LinearLayout
                        android:id="@+id/health_title_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/health_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="Recent notes"
                            android:src="@drawable/health_and_well_being_home_icon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/work_study_title_container" />

                        <TextView
                            android:id="@+id/health_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/health_title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@+id/work_study_icon"
                            app:layout_constraintTop_toTopOf="@+id/work_study_title_container" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/health_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/work_study_title_container" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/custom_bottom_bar"
            layout="@layout/custom_bottom_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>